# j24-same-day-clearance

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  approve.py  docker-compose.yml  pyproject.toml  schedule.py  start_deadstock.py  start_poller.py  starter.py  worker.py
activities/: deadstock.py  feeds.py  persistence.py  pipeline.py  profile.py  snapshot.py
adapters/: _bolt.py  _s3.py  catalog.py  copy_llm.py  deadstock.py  feeds.py  goldeneye.py  inventory.py  notify.py  profile.py  retailmedia.py  sku_master.py
api/: main.py
db/: database.py  models.py  repo.py
docs/: ARCHITECTURE.md  Agentic_Perishables_Markdown_Design.docx  PROD_READINESS_BACKLOG.md  Perishables-Markdown-Temporal-Design.md  V3-Architecture-Design.docx  V3-Architecture-Design.md  V3-TESTING.md  inventory-item-details-api.md
pricing/: deadstock_engine.py  decision_engine.py  ladder.py  projection.py  shelf_life_scheduler.py
shared/: config.py  env.py  models.py  stores.py
tests/: test_deadstock_adapters.py  test_deadstock_engine.py  test_decision_engine.py  test_feeds.py  test_profile_s3.py  test_projection.py  test_shelf_life_scheduler.py  test_workflows_e2e.py
tests/e2e/: deadstock_clearance_e2e.py  sim_clearance_e2e.py
tools/: mock_bolt.py
web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
web/src/pages/: Approval.tsx  Config.tsx  Dashboard.tsx  DeadStock.tsx  DeadStockRun.tsx  MyOffers.tsx  (+1 more)
workflows/: deadstock.py  deadstock_parent.py  facility_poller.py  markdown.py
